--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/deployment-operator.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/deployment-operator.yaml
@@ -30,7 +30,7 @@ spec:
         name: {{ .Release.Name }}
         {{- include "dynatrace-operator.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ .Release.Name }}
+      serviceAccountName: {{ .Values.operatorServiceAccount }}
       containers:
         - name: {{ .Release.Name }}
           # Replace this with the built image name
