--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
@@ -1,3 +1,6 @@
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- if and (eq .Values.mode "fullstack") (ne .Values.oneagent.apiUrl "") }}
+
 # Copyright 2019 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,15 +15,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
-{{- if eq .Values.mode "fullstack" }}
 apiVersion: dynatrace.com/v1alpha1
 kind: OneAgent
 metadata:
   name: {{ .Values.oneagent.name }}
   namespace: {{ .Release.Namespace }}
 spec:
-  apiUrl: {{ required "ApiUrl needs to be set!" .Values.oneagent.apiUrl }}
+  apiUrl: {{ .Values.oneagent.apiUrl }}
   tokens: {{ .Values.oneagent.name }}
   image: {{ include "dynatrace-oneagent.image" . | quote }}
 
