adding tests for previous template files

--- a/dynatrace-operator/tests/CommonDTO/customresource-dynakube_kubemon_test.yaml
+++ b/dynatrace-operator/tests/CommonDTO/customresource-dynakube_kubemon_test.yaml
@@ -1,6 +1,6 @@
 suite: test dynakube customresource with kubemon
 templates:
-  - customresource-dynakube.yaml
+  - CommonDTO/customresource-dynakube.yaml
 tests:
   - it: should add kubernetesMonitoring if set
     set:
