--- a/dynatrace-operator/tests/Common/role-operator_test.yaml
+++ b/dynatrace-operator/tests/Common/role-operator_test.yaml
@@ -1,6 +1,6 @@
 suite: test role for dynatrace operator
 templates:
-  - CommonDTO/role-operator.yaml
+  - Common/role-operator.yaml
 tests:
   - it: should exist
     asserts:
