--- a/dynatrace-operator/tests/Common/secret_test.yaml
+++ b/dynatrace-operator/tests/Common/secret_test.yaml
@@ -1,6 +1,6 @@
 suite: test secret for dynatrace operator
 templates:
-  - CommonDTO/secret.yaml
+  - Common/secret.yaml
 tests:
   - it: should not exist if tokens not set
     asserts:
