--- a/dynatrace-operator/templates/Common/clusterrole-operator.yaml
+++ b/dynatrace-operator/templates/Common/clusterrole-operator.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,36 +12,47 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: dynatrace-oneagent-webhook
+  name: {{ .Release.Name }}
   labels:
-    {{- include "dynatrace-oneagent-operator.commonlabelswebhook" . | nindent 4 }}
+    {{- include "dynatrace-operator.labels" . | nindent 4 }}
 rules:
   - apiGroups:
-      - ""
+      - ""  # "" indicates the core API group
     resources:
+      - namespaces
+    resourceNames:
+      - "kube-system"
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+    - ""
+    resources:
+      - nodes
       - namespaces
     verbs:
       - get
       - list
       - watch
   - apiGroups:
-      - admissionregistration.k8s.io
+    - ""
     resources:
-      - mutatingwebhookconfigurations
+      - secrets
     verbs:
-      - list
       - create
-      - watch
   - apiGroups:
-      - admissionregistration.k8s.io
+    - ""
     resources:
-      - mutatingwebhookconfigurations
+      - secrets
     resourceNames:
-      - dynatrace-oneagent-webhook
+      - dynatrace-dynakube-config
+      - dynatrace-dynakube-pull-secret
     verbs:
       - get
       - update
+      - delete
