--- a/dynatrace-operator/templates/Common/clusterrole-webhook.yaml
+++ b/dynatrace-operator/templates/Common/clusterrole-webhook.yaml
@@ -12,37 +12,36 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-webhook
   labels:
-    {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
+    {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
 rules:
   - apiGroups:
-      - ""  # "" indicates the core API group
+      - ""
     resources:
-      - nodes
       - namespaces
     verbs:
       - get
       - list
       - watch
   - apiGroups:
-      - ""
+      - admissionregistration.k8s.io
     resources:
-      - secrets
+      - mutatingwebhookconfigurations
     verbs:
+      - list
       - create
+      - watch
   - apiGroups:
-      - ""
+      - admissionregistration.k8s.io
     resources:
-      - secrets
+      - mutatingwebhookconfigurations
     resourceNames:
-      - dynatrace-oneagent-config
-      - dynatrace-oneagent-pull-secret
+      - dynatrace-webhook
     verbs:
       - get
       - update
-      - delete
