--- a/dynatrace-operator/templates/Common/clusterrolebinding-webhook.yaml
+++ b/dynatrace-operator/templates/Common/clusterrolebinding-webhook.yaml
@@ -1,4 +1,4 @@
-# Copyright 2020 Dynatrace LLC
+# Copyright 2019 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,20 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-webhook
   labels:
-    {{- include "dynatrace-operator.labels" . | nindent 4 }}
-rules:
-  - apiGroups:
-      - ""  # "" indicates the core API group
-    resources:
-      - namespaces
-    resourceNames:
-      - "kube-system"
-    verbs:
-      - get
-      - list
-      - watch
+    {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
+subjects:
+  - kind: ServiceAccount
+    name: dynatrace-webhook
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: dynatrace-webhook
+  apiGroup: rbac.authorization.k8s.io
