--- a/dynatrace-operator/templates/Common/configmap.yaml
+++ b/dynatrace-operator/templates/Common/configmap.yaml
@@ -12,14 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
-{{- if .Values.oneagent.trustedCAs }}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+{{- if .Values.trustedCAs }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.oneagent.name }}
+  name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
 data:
   certs: |
-{{ .Values.oneagent.trustedCAs | indent 4 }}
+{{ .Values.trustedCAs | indent 4 }}
 {{- end }}
