--- a/dynatrace-operator/tests/Common/KubernetesMonitoring/clusterrolebinding-kubernetes-monitoring_test.yaml
+++ b/dynatrace-operator/tests/Common/KubernetesMonitoring/clusterrolebinding-kubernetes-monitoring_test.yaml
@@ -1,22 +1,21 @@
-suite: test role-binding for kubernetes monitoring
+suite: test clusterrole-binding for kubernetes monitoring
 templates:
-  - CommonDTO/KubernetesMonitoring/rolebinding-kubernetes-monitoring.yaml
+  - Common/KubernetesMonitoring/clusterrolebinding-kubernetes-monitoring.yaml
 tests:
   - it: should exist
     asserts:
       - isKind:
-          of: RoleBinding
+          of: ClusterRoleBinding
       - equal:
           path: metadata.name
           value: dynatrace-kubernetes-monitoring
-      - equal:
-          path: metadata.namespace
-          value: NAMESPACE
+      - isNotEmpty:
+          path: metadata.labels
       - equal:
           path: roleRef
           value:
             apiGroup: rbac.authorization.k8s.io
-            kind: Role
+            kind: ClusterRole
             name: dynatrace-kubernetes-monitoring
       - contains:
           path: subjects
