--- a/dynatrace-operator/tests/Common/KubernetesMonitoring/podsecuritypolicy-kubernetes-monitoring_test.yaml
+++ b/dynatrace-operator/tests/Common/KubernetesMonitoring/podsecuritypolicy-kubernetes-monitoring_test.yaml
@@ -1,6 +1,6 @@
-suite: test pod security policy for dynatrace operator
+suite: test pod security policy for kubernetes monitoring
 templates:
-  - CommonDTO/podsecuritypolicy-operator.yaml
+  - Common/KubernetesMonitoring/podsecuritypolicy-kubernetes-monitoring.yaml
 tests:
   - it: should exist
     asserts:
@@ -8,7 +8,7 @@ tests:
           of: PodSecurityPolicy
       - equal:
           path: metadata.name
-          value: RELEASE-NAME
+          value: dynatrace-kubernetes-monitoring
       - equal:
           path: metadata.annotations
           value:
