--- a/dynatrace-operator/tests/Common/KubernetesMonitoring/serviceaccount-kubernetes-monitoring_test.yaml
+++ b/dynatrace-operator/tests/Common/KubernetesMonitoring/serviceaccount-kubernetes-monitoring_test.yaml
@@ -1,6 +1,6 @@
-suite: test serviceaccount for dynatrace operator
+suite: test service account for kubernetes monitoring
 templates:
-  - CommonDTO/serviceaccount-operator.yaml
+  - Common/KubernetesMonitoring/serviceaccount-kubernetes-monitoring.yaml
 tests:
   - it: should exist
     asserts:
@@ -8,10 +8,9 @@ tests:
           of: ServiceAccount
       - equal:
           path: metadata.name
-          value: RELEASE-NAME
+          value: dynatrace-kubernetes-monitoring
       - equal:
           path: metadata.namespace
           value: NAMESPACE
       - isNotEmpty:
           path: metadata.labels
-
