--- a/dynatrace-operator/tests/Common/clusterrolebinding-webhook_test.yaml
+++ b/dynatrace-operator/tests/Common/clusterrolebinding-webhook_test.yaml
@@ -1,25 +1,27 @@
-suite: test clusterrole-binding for dynatrace operator
+suit: test clusterrolebinding for the webhook
 templates:
-  - CommonDTO/clusterrolebinding-operator.yaml
+  - Common/clusterrolebinding-webhook.yaml
 tests:
   - it: should exist
+    set:
+      platform: kubernetes
     asserts:
       - isKind:
           of: ClusterRoleBinding
       - equal:
           path: metadata.name
-          value: RELEASE-NAME
+          value: dynatrace-webhook
       - isNotEmpty:
           path: metadata.labels
-      - contains:
+      - equal:
           path: subjects
-          content:
-            kind: ServiceAccount
-            name: RELEASE-NAME
-            namespace: NAMESPACE
+          value:
+            - kind: ServiceAccount
+              name: dynatrace-webhook
+              namespace: NAMESPACE
       - equal:
           path: roleRef
           value:
             kind: ClusterRole
-            name: RELEASE-NAME
+            name: dynatrace-webhook
             apiGroup: rbac.authorization.k8s.io
