--- a/dynatrace-operator/tests/Common/podsecuritypolicy-operator_test.yaml
+++ b/dynatrace-operator/tests/Common/podsecuritypolicy-operator_test.yaml
@@ -1,6 +1,6 @@
-suite: test pod security policy for kubernetes monitoring
+suite: test pod security policy for dynatrace operator
 templates:
-  - CommonDTO/KubernetesMonitoring/podsecuritypolicy-kubernetes-monitoring.yaml
+  - Common/podsecuritypolicy-operator.yaml
 tests:
   - it: should exist
     asserts:
@@ -8,7 +8,7 @@ tests:
           of: PodSecurityPolicy
       - equal:
           path: metadata.name
-          value: dynatrace-kubernetes-monitoring
+          value: RELEASE-NAME
       - equal:
           path: metadata.annotations
           value:
