--- a/dynatrace-operator/tests/Common/serviceaccount-operator_test.yaml
+++ b/dynatrace-operator/tests/Common/serviceaccount-operator_test.yaml
@@ -1,6 +1,6 @@
-suite: test service account for kubernetes monitoring
+suite: test serviceaccount for dynatrace operator
 templates:
-  - CommonDTO/KubernetesMonitoring/serviceaccount-kubernetes-monitoring.yaml
+  - Common/serviceaccount-operator.yaml
 tests:
   - it: should exist
     asserts:
@@ -8,9 +8,10 @@ tests:
           of: ServiceAccount
       - equal:
           path: metadata.name
-          value: dynatrace-kubernetes-monitoring
+          value: RELEASE-NAME
       - equal:
           path: metadata.namespace
           value: NAMESPACE
       - isNotEmpty:
           path: metadata.labels
+
