migrated common files

--- a/dynatrace-operator/templates/Common/serviceaccount-webhook.yaml
+++ b/dynatrace-operator/templates/Common/serviceaccount-webhook.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,18 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+apiVersion: v1
+kind: ServiceAccount
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
-subjects:
-  - kind: ServiceAccount
-    name: {{ .Release.Name }}
-roleRef:
-  kind: Role
-  name: {{ .Release.Name }}
-  apiGroup: rbac.authorization.k8s.io
