--- a/dynatrace-operator/tests/Common/secret_test.yaml
+++ b/dynatrace-operator/tests/Common/secret_test.yaml
@@ -7,24 +7,33 @@ tests:
       - hasDocuments:
           count: 0
 
+  - it: should not exist if autoCreate is false
+    set:
+      secret.apiToken: test-api-token
+      secret.paasToken: test-paas-token
+      secret.autoCreate: false
+    asserts:
+      - hasDocuments:
+          count: 0
+
   - it: should not exist if only apiToken is set
     set:
-      apiToken: test-token
+      secret.apiToken: test-token
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should not exist if only paasToken is set
     set:
-      paasToken: test-token
+      secret.paasToken: test-token
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should exist if both toknes ar eset
     set:
-      apiToken: test-api-token
-      paasToken: test-paas-token
+      secret.apiToken: test-api-token
+      secret.paasToken: test-paas-token
       name: test-name
     asserts:
       - isKind:
@@ -49,8 +58,8 @@ tests:
 
   - it: should contain a value for a proxy if proxy is set
     set:
-      apiToken: test-api-token
-      paasToken: test-paas-token
+      secret.apiToken: test-api-token
+      secret.paasToken: test-paas-token
       name: test-name
       proxy: test-proxy
     assert:
