--- a/dynatrace-operator/templates/Common/deployment-operator.yaml
+++ b/dynatrace-operator/templates/Common/deployment-operator.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,22 +22,24 @@ metadata:
     {{- include "dynatrace-operator.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       name: {{ .Release.Name }}
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
         name: {{ .Release.Name }}
         {{- include "dynatrace-operator.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ .Release.Name }}
       containers:
         - name: {{ .Release.Name }}
+          args:
+            - operator
           # Replace this with the built image name
           image: {{- include "dynatrace-operator.image" . | nindent 12 }}
-          command:
-            - dynatrace-operator
           imagePullPolicy: Always
           env:
             - name: POD_NAMESPACE
@@ -47,6 +50,11 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          ports:
+            - containerPort: 8080
+              name: metrics
+            - containerPort: 10080
+              name: server-port
           resources:
             requests:
               cpu: 50m
@@ -54,3 +62,48 @@ spec:
             limits:
               cpu: 100m
               memory: 256Mi
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTP
+            initialDelaySeconds: 15
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTP
+            initialDelaySeconds: 15
+            periodSeconds: 10
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: beta.kubernetes.io/arch
+                    operator: In
+                    values:
+                      - amd64
+                      - arm64
+                  - key: beta.kubernetes.io/os
+                    operator: In
+                    values:
+                      - linux
+              - matchExpressions:
+                  - key: kubernetes.io/arch
+                    operator: In
+                    values:
+                      - amd64
+                      - arm64
+                  - key: kubernetes.io/os
+                    operator: In
+                    values:
+                      - linux
+      serviceAccountName: {{ .Release.Name }}
+      {{- if .Values.operator.nodeSelector }}
+      nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.operator.tolerations }}
+      tolerations: {{- toYaml .Values.operator.tolerations | nindent 8 }}
+      {{- end -}}
