--- a/dynatrace-operator/templates/Common/deployment-webhook.yaml
+++ b/dynatrace-operator/templates/Common/deployment-webhook.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,29 +12,29 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dynatrace-oneagent-webhook
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
   labels:
-    dynatrace.com/operator: oneagent
+    dynatrace.com/operator: dynakube
 spec:
   replicas: 1
   revisionHistoryLimit: 1
   selector:
     matchLabels:
-      internal.oneagent.dynatrace.com/component: webhook
-      internal.oneagent.dynatrace.com/app: webhook
+      internal.dynatrace.com/component: webhook
+      internal.dynatrace.com/app: webhook
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         dynatrace.com/operator: oneagent
-        internal.oneagent.dynatrace.com/component: webhook
-        internal.oneagent.dynatrace.com/app: webhook
+        internal.dynatrace.com/component: webhook
+        internal.dynatrace.com/app: webhook
     spec:
       affinity:
         nodeAffinity:
@@ -64,10 +64,10 @@ spec:
         - name: webhook
           args:
             - webhook-server
-          image: {{ include "dynatrace-oneagent-operator.image" . }}
+          image: {{- include "dynatrace-operator.image" . | nindent 12 }}
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
+            - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
@@ -80,7 +80,14 @@ spec:
               path: /healthz
               port: server-port
               scheme: HTTPS
-            initialDelaySeconds: 15
+            initialDelaySeconds: 60
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTPS
+            initialDelaySeconds: 60
             periodSeconds: 10
           ports:
             - name: metrics
@@ -100,10 +107,10 @@ spec:
         - name: bootstrapper
           args:
             - webhook-bootstrapper
-          image: {{ include "dynatrace-oneagent-operator.image" . }}
+          image: {{- include "dynatrace-operator.image" . | nindent 12 }}
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
+            - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
@@ -114,6 +121,22 @@ spec:
           ports:
             - name: metrics
               containerPort: 8484
+            - name: server-port
+              containerPort: 9080
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
           resources:
             requests:
               cpu: 10m
@@ -124,13 +147,7 @@ spec:
           volumeMounts:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
-      serviceAccountName: dynatrace-oneagent-webhook
-      {{- if .Values.operator.nodeSelector }}
-      nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
-      {{- end }}
-      {{- if .Values.operator.tolerations }}
-      tolerations: {{- toYaml .Values.operator.tolerations | nindent 8 }}
-      {{- end }}
+      serviceAccountName: dynatrace-webhook
       volumes:
         - name: certs-volume
-          emptyDir: {}
+          emptyDir: { }
