--- a/dynatrace-operator/templates/Common/secret.yaml
+++ b/dynatrace-operator/templates/Common/secret.yaml
@@ -12,15 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if and (.Values.apiToken) (.Values.paasToken) }}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+{{- if and (.Values.secret.apiToken) (.Values.secret.paasToken) (.Values.secret.autoCreate) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
 data:
-  apiToken: {{ .Values.apiToken | b64enc }}
-  paasToken: {{ .Values.paasToken | b64enc }}
+  apiToken: {{ .Values.secret.apiToken | b64enc }}
+  paasToken: {{ .Values.secret.paasToken | b64enc }}
   {{- if .Values.proxy }}
   proxy: {{ .Values.proxy | b64enc }}
   {{- end }}
