--- a/dynatrace-operator/templates/Common/service.yaml
+++ b/dynatrace-operator/templates/Common/service.yaml
@@ -1,5 +1,4 @@
-
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,18 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: dynatrace-oneagent-webhook
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "dynatrace-oneagent-operator.commonlabelswebhook" . | nindent 4 }}
+  {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
 spec:
   selector:
-    internal.oneagent.dynatrace.com/app: webhook
-    internal.oneagent.dynatrace.com/component: webhook
+    internal.dynatrace.com/app: webhook
+    internal.dynatrace.com/component: webhook
   ports:
     - port: 443
       protocol: TCP
