--- a/dynatrace-operator/templates/Common/role-webhook.yaml
+++ b/dynatrace-operator/templates/Common/role-webhook.yaml
@@ -13,18 +13,54 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "kubernetes" }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: Role
 metadata:
-  name: dynatrace-dynakube-oneagent-unprivileged
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: dynatrace-dynakube-oneagent-unprivileged
-subjects:
-  - kind: ServiceAccount
-    name: dynatrace-dynakube-oneagent-unprivileged
-    namespace: {{ .Release.Namespace }}
-{{ end }}
+  labels:
+    {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - services
+      - configmaps
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - dynatrace.com
+    resources:
+      - dynakubes
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - list
+      - create
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - update
+      - create
