--- a/dynatrace-operator/templates/Common/serviceaccount-oneagent-unprivileged.yaml
+++ b/dynatrace-operator/templates/Common/serviceaccount-oneagent-unprivileged.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,9 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dynatrace-oneagent-webhook
+  name: dynatrace-dynakube-oneagent-unprivileged
   namespace: {{ .Release.Namespace }}
