--- a/dynatrace-operator/templates/Kubernetes/podsecuritypolicy-webhook.yaml
+++ b/dynatrace-operator/templates/Kubernetes/podsecuritypolicy-webhook.yaml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 {{- if and (eq .Values.platform "kubernetes") (.Values.createPodSecurityPolicies)}}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: dynatrace-oneagent-webhook
+  name: dynatrace-webhook
   annotations:
     seccomp.security.alpha.kubernetes.io/allowedProfileNames: "docker/default"
     apparmor.security.beta.kubernetes.io/allowedProfileNames: "runtime/default"
