--- a/dynatrace-operator/templates/Kubernetes/role-oneagent-unprivileged.yaml
+++ b/dynatrace-operator/templates/Kubernetes/role-oneagent-unprivileged.yaml
@@ -12,12 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 {{- if eq .Values.platform "kubernetes" }}
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: dynatrace-oneagent-unprivileged
+  name: dynatrace-dynakube-oneagent-unprivileged
   namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
@@ -25,7 +25,7 @@ rules:
     resources:
       - podsecuritypolicies
     resourceNames:
-      - dynatrace-oneagent-unprivileged
+      - dynatrace-dynakube-oneagent-unprivileged
     verbs:
       - use
 {{ end }}
