--- a/dynatrace-operator/templates/Kubernetes/role-webhook.yaml
+++ b/dynatrace-operator/templates/Kubernetes/role-webhook.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,15 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 {{- if eq .Values.platform "kubernetes" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: dynatrace-oneagent-webhook
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "dynatrace-oneagent-operator.commonlabelswebhook" . | nindent 4 }}
+    {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
 rules:
   - apiGroups:
       - ""
@@ -45,17 +45,32 @@ rules:
   - apiGroups:
       - dynatrace.com
     resources:
-      - oneagentapms
+      - dynakubes
     verbs:
       - get
       - list
       - watch
   - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - list
+      - create
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - update
+      - create
+  - apiGroups:
       - policy
     resources:
       - podsecuritypolicies
     resourceNames:
-      - dynatrace-oneagent-webhook
+      - dynatrace-webhook
     verbs:
       - use
 {{ end }}
