--- a/dynatrace-operator/templates/Kubernetes/rolebinding-oneagent.yaml
+++ b/dynatrace-operator/templates/Kubernetes/rolebinding-oneagent.yaml
@@ -12,19 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 {{- if eq .Values.platform "kubernetes" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: dynatrace-oneagent
+  name: dynatrace-dynakube-oneagent
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: dynatrace-oneagent
+  name: dynatrace-dynakube-oneagent
 subjects:
   - kind: ServiceAccount
-    name: dynatrace-oneagent
+    name: dynatrace-dynakube-oneagent
     namespace: {{ .Release.Namespace }}
 {{ end }}
