migrated openshift files

--- a/dynatrace-operator/templates/Openshift/serviceaccount-webhook.yaml
+++ b/dynatrace-operator/templates/Openshift/serviceaccount-webhook.yaml
@@ -17,7 +17,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dynatrace-dynakube-oneagent
+  name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
 imagePullSecrets:
   - name: redhat-connect
