--- a/dynatrace-operator/templates/Openshift/serviceaccount-operator.yaml
+++ b/dynatrace-operator/templates/Openshift/serviceaccount-operator.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,13 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
-{{- if eq .Values.platform "openshift" }}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+{{- if eq .Values.platform "openshift"}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dynatrace-oneagent-operator
+  name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-operator.labels" . | nindent 4 }}
 imagePullSecrets:
   - name: redhat-connect
   - name: redhat-connect-sso
