--- a/dynatrace-operator/tests/Common/secret_test.yaml
+++ b/dynatrace-operator/tests/Common/secret_test.yaml
@@ -3,6 +3,9 @@ templates:
   - Common/secret.yaml
 tests:
   - it: should not exist if tokens not set
+    set:
+      secret.apiToken:
+      secret.paasToken:
     asserts:
       - hasDocuments:
           count: 0
@@ -19,12 +22,14 @@ tests:
   - it: should not exist if only apiToken is set
     set:
       secret.apiToken: test-token
+      secret.paasToken:
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should not exist if only paasToken is set
     set:
+      secret.apiToken:
       secret.paasToken: test-token
     asserts:
       - hasDocuments:
