--- a/dynatrace-operator/tests/Kubernetes/serviceaccount-operator_test.yaml
+++ b/dynatrace-operator/tests/Kubernetes/serviceaccount-operator_test.yaml
@@ -1,8 +1,10 @@
 suite: test serviceaccount for dynatrace operator
 templates:
-  - Common/serviceaccount-operator.yaml
+  - Kubernetes/serviceaccount-operator.yaml
 tests:
   - it: should exist
+    set:
+      platform: kubernetes
     asserts:
       - isKind:
           of: ServiceAccount
