--- a/dynatrace-operator/tests/Kubernetes/serviceaccount-webhook_test.yaml
+++ b/dynatrace-operator/tests/Kubernetes/serviceaccount-webhook_test.yaml
@@ -1,8 +1,17 @@
 suite: test serviceaccount for webhook
 templates:
-  - Common/serviceaccount-webhook.yaml
+  - Kubernetes/serviceaccount-webhook.yaml
 tests:
+  - it: should not exist if platform is openshift
+    set:
+      platform: openshift
+    asserts:
+      - hasDocuments:
+          count: 0
+
   - it: should exist
+    set:
+      platform: kubernetes
     asserts:
       - isKind:
           of: ServiceAccount
