--- a/dynatrace-operator/templates/Kubernetes/serviceaccount-operator.yaml
+++ b/dynatrace-operator/templates/Kubernetes/serviceaccount-operator.yaml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+{{- if eq .Values.platform "kubernetes"}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -20,3 +21,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dynatrace-operator.labels" . | nindent 4 }}
+{{ end }}
