--- a/dynatrace-operator/templates/Kubernetes/serviceaccount-webhook.yaml
+++ b/dynatrace-operator/templates/Kubernetes/serviceaccount-webhook.yaml
@@ -13,54 +13,10 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+{{- if eq .Values.platform "kubernetes"}}
+apiVersion: v1
+kind: ServiceAccount
 metadata:
   name: dynatrace-webhook
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "dynatrace-operator.commonlabelswebhook" . | nindent 4 }}
-rules:
-  - apiGroups:
-      - ""
-    resources:
-      - services
-      - configmaps
-      - secrets
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-  - apiGroups:
-      - ""
-    resources:
-      - pods
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - dynatrace.com
-    resources:
-      - dynakubes
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - ""
-    resources:
-      - events
-    verbs:
-      - list
-      - create
-  - apiGroups:
-      - coordination.k8s.io
-    resources:
-      - leases
-    verbs:
-      - get
-      - update
-      - create
+{{ end }}
