--- a/dynatrace-operator/tests/Kubernetes/podsecuritypolicy-operator_test.yaml
+++ b/dynatrace-operator/tests/Kubernetes/podsecuritypolicy-operator_test.yaml
@@ -18,6 +18,8 @@ tests:
           count: 0
 
   - it: should exist
+    set:
+      platform: kubernetes
     asserts:
       - isKind:
           of: PodSecurityPolicy
