--- a/dynatrace-operator/values.yaml
+++ b/dynatrace-operator/values.yaml
@@ -26,10 +26,15 @@ networkZone: ""
 enableIstio: false
 createPodSecurityPolicies: true
 
+# Deprecated, use secret.apiToken instead
+apiToken: ""
+# Deprecated, use secret.paasToken instead
+paasToken: ""
+
 secret:
   autoCreate: true
-  apiToken: ""
-  paasToken: ""
+  apiToken:
+  paasToken:
 
 operator:
   image: ""
