--- a/dynatrace-operator/templates/Common/secret.yaml
+++ b/dynatrace-operator/templates/Common/secret.yaml
@@ -13,15 +13,15 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if and (.Values.secret.apiToken) (.Values.secret.paasToken) (.Values.secret.autoCreate) }}
+{{- if and (include "dyntrace-operator.apiToken" .) (include "dyntrace-operator.paasToken" .) (.Values.secret.autoCreate) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
 data:
-  apiToken: {{ .Values.secret.apiToken | b64enc }}
-  paasToken: {{ .Values.secret.paasToken | b64enc }}
+  apiToken: {{ include "dyntrace-operator.apiToken" . | b64enc }}
+  paasToken: {{ include "dyntrace-operator.paasToken" . | b64enc }}
   {{- if .Values.proxy }}
   proxy: {{ .Values.proxy | b64enc }}
   {{- end }}
